2003-11-18  John Luke  <jluke@cfl.rr.com>
	
	* configure.in: test for gtkhtml3
	* gtkhtml/Makefile.in: build conditionally

2003-11-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Pixbuf.custom : resurrect the stream/resource ctors. rename
	LoadResource to LoadFromResource for the string overload.
	* gdk/PixbufLoader.custom: add an internal prop to get an unwrapped
	pixbuf handle.

2003-11-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gdk/Pixbuf.custom:
	(LoadResource (assembly, resource)): a null assembly uses the calling
	assembly.

2003-11-17  Ettore Perazzoli  <ettore@ximian.com>

	* gdk/Pixbuf.custom: Removed the Assembly constructors.
	(Pixbuf.LoadResource (string)): New.
	(Pixbuf.LoadResource (Assembly, string)): New.

2003-11-16  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters: handle array+len param pairs.
	* gtk/Gtk.metadata : unhide DestDefaults and mark targets param of
	drag_dest_set as array.
	* gtk/gtk-api.xml : regenerate

2003-11-14  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : fully qualify attr paths
	* parser/gapi-fixup.cs : compile a path expression per Ben Maurer
	suggestion.

2003-11-14  Mike Kestner  <mkestner@ximian.com>

	* configure.in : update VERSION to 0.14. Tagged 0.13.

2003-11-13  Mike Kestner  <mkestner@ximian.com>

	* generator/SignalHandler.cs : guard against destroyed signalhandlers.

2003-11-07  Mike Kestner  <mkestner@ximian.com>

	* configure.in : add mono check.  expand wrapper scripts
	* generator/Makefile.in : use install. install a gapi-codegen wrapper.
	* generator/SymbolTable.cs : add SimpleGen for short
	* generator/gapi-codegen.in : new wrapper script in file.
	* parser/Makefile.in : use install. install a gapi-fixup wrapper.
	* generator/gapi-fixup.in : new wrapper script in file.
	* parser/gapi2xml.pl : deal with non-namespaced enums. ignore
	forward struct declarations.
	
2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* gtk/ITreeNode.cs : make Parent readonly