@@ -1,3 +1,8 @@
+2003-11-18  Peter Williams  <peter@newton.cx>
+
+ 	* gtk/NodeStore.cs (GetNode): New public function. Patch refactored
+	a bit to eliminate code duplication with get_node_cb.
+ 
 2003-11-18  John Luke  <jluke@cfl.rr.com>
 	
 	* configure.in: test for gtkhtml3
